--- a/css/icons.scss
+++ b/css/icons.scss
@@ -10,6 +10,7 @@
 @include icon-black-white('attach', 'deck', 1);
 @include icon-black-white('reply', 'deck', 1);
 @include icon-black-white('notifications-dark', 'deck', 1);
+@include icon-black-white('description', 'deck', 1);
 
 .icon-toggle-compact-collapsed {
 	@include icon-color('toggle-view-expand', 'deck', $color-black);
