--- a/src/css/comments.scss
+++ b/src/css/comments.scss
@@ -34,6 +34,7 @@
 	display: flex;
 	align-items: center;
 	color: var(--color-text-light);
+	margin-right: 10px;
 
 	.username {
 		padding: 10px;
@@ -49,4 +50,17 @@
 .comment--content {
 	margin-left: 44px;
 	word-break: break-word;
+}
+
+.comment-wrapper {
+	display: flex;
+	align-items: center;
+}
+
+.comment-form {
+	width: 100%;
+}
+
+.comment-form .comment-form__contenteditable {
+	border-radius: 4px;
 }
