--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -4,4 +4,4 @@ $stack-spacing: 12px;
 $stack-width: 260px;
 $board-spacing: 16px;
 
-$color-text-value: #d1ebfe;
+$color-value-card-background: #d1ebfe;
