--- a/css/deck.css
+++ b/css/deck.css
@@ -5,3 +5,12 @@
 .icon-deck-white, .icon-deck.icon-white {
   background-image: url(../img/deck.svg);
 }
+
+body[data-theme-dark] .icon-deck {
+  background-image: url(../img/deck.svg);
+}
+
+body[data-theme-dark] .icon-deck-white,
+body[data-theme-dark] .icon-deck.icon-white {
+  background-image: url(../img/deck-dark.svg);
+}
