--- a/css/deck.css
+++ b/css/deck.css
@@ -1,16 +1,9 @@
 .icon-deck {
-  background-image: url(../img/deck-dark.svg);
+	background-image: url(../img/deck-dark.svg);
+	filter: var(--background-invert-if-dark);
 }
 
 .icon-deck-white, .icon-deck.icon-white {
-  background-image: url(../img/deck.svg);
-}
-
-body[data-theme-dark] .icon-deck {
-  background-image: url(../img/deck.svg);
-}
-
-body[data-theme-dark] .icon-deck-white,
-body[data-theme-dark] .icon-deck.icon-white {
-  background-image: url(../img/deck-dark.svg);
+	background-image: url(../img/deck.svg);
+	filter: var(--background-invert-if-dark);
 }
