--- a/css/deck.css
+++ b/css/deck.css
@@ -14,6 +14,7 @@
 
 input[type=submit].icon-confirm {
 	border-color: var(--color-border-maxcontrast) !important;
+	border-style: solid;
 	border-left: none;
 }
 
