fix: make bin icon red on button hover
Signed-off-by: Seth Falco <seth@falco.fun>

--- a/css/deck.css
+++ b/css/deck.css
@@ -22,3 +22,8 @@ input[type=text]:focus+input[type=submit].icon-confirm,
 input[type=text]:hover+input[type=submit].icon-confirm {
 	border-color: var(--color-main-text) !important;
 }
+
+button:focus .icon-delete,
+button:hover .icon-delete {
+	background-image: var(--icon-delete-color-red);
+}
