docs: add permalinks
Signed-off-by: Viktor Diezel <viktor.diezel@posteo.de>

--- a/docs/extra.css
+++ b/docs/extra.css
@@ -14,3 +14,7 @@
 .wy-menu-vertical li.toctree-l2 li.toctree-l3.current li.toctree-l4>a {
   padding-inline-start: 3.5em;
 }
+
+.headerlink {
+  font-size: 1.125rem !important;
+}
