Input field for new cards moved to the top of the column
close #6457

Signed-off-by: Samuel Suther <info@suther.de>

--- a/css/deck.css
+++ b/css/deck.css
@@ -22,3 +22,11 @@ input[type=text]:focus+input[type=submit].icon-confirm,
 input[type=text]:hover+input[type=submit].icon-confirm {
 	border-color: var(--color-main-text) !important;
 }
+.app-deck {
+  .stack__card-add form {
+    order: 1;
+  }
+  .smooth-dnd-container.vertical {
+    order: 2;
+  }
+}
